--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -15,6 +15,25 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Public Sans", sans-serif;
   line-height: 1.3;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.flex-jc-sb {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.flex-jc-c {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
