--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -36,4 +36,14 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+.flex-ai-c {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__menu > span {
+  display: block;
+}
 /*# sourceMappingURL=style.css.map */
