--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,8 @@
 .header {
+  nav {
+    padding: 24px;
+  }
+
   &__logo {
     img {
     }
@@ -7,6 +11,20 @@
   &__menu {
     > span {
       display: block;
+      width: 26px;
+      height: 2px;
+      background-color: $darkBlue;
+
+      &:not(:last-child) {
+        margin-bottom: 3px;
+      }
+    }
+  }
+
+  &__links {
+
+    a {
+      
     }
   }
 }
