--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -19,6 +19,10 @@ body {
   line-height: 1.3;
 }
 
+a, a:visited, a:hover {
+  text-decoration: none;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -43,7 +47,18 @@ body {
           align-items: center;
 }
 
+.header nav {
+  padding: 24px;
+}
+
 .header__menu > span {
   display: block;
+  width: 26px;
+  height: 2px;
+  background-color: #2d314d;
+}
+
+.header__menu > span:not(:last-child) {
+  margin-bottom: 3px;
 }
 /*# sourceMappingURL=style.css.map */
