adding mix func

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 // Primary
 $darkBlue: hsl(233, 26%, 24%);
-$limeGrenn: hsl(136, 65%, 51%);
+$limeGreen: hsl(136, 65%, 51%);
 $brightCyan: hsl(192, 79%, 51%);
 
 // Neutral
