--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,6 +16,7 @@ body {
   padding: 0;
   font-family: "Public Sans", sans-serif;
   font-size: $font-med;
+  font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
 }
@@ -24,7 +25,6 @@ a,
 a:visited,
 a:hover {
   text-decoration: none;
-  color: $grayishBlue;
 }
 
 .flex {
@@ -41,4 +41,25 @@ a:hover {
   &-ai-c {
     align-items: center;
   }
+}
+
+// Buttons
+button,
+.button {
+  padding: 1rem 1.875rem;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  color: $white;
+  font-weight: 400;
+}
+
+// Visibility
+.hide-for-mobile {
+  // hide for tablet and mobile
+}
+
+.hide-for-desktop {
+  // hide for desktop viewport widths
 }
