--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -17,6 +17,7 @@ body {
   padding: 0;
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
+  font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
 }
@@ -25,7 +26,6 @@ a,
 a:visited,
 a:hover {
   text-decoration: none;
-  color: #9698a6;
 }
 
 .flex {
@@ -52,6 +52,18 @@ a:hover {
           align-items: center;
 }
 
+button,
+.button {
+  padding: 1rem 1.875rem;
+  background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#1fbde5));
+  background: linear-gradient(to right, #31d35c, #1fbde5);
+  border: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  color: white;
+  font-weight: 400;
+}
+
 .header nav {
   padding: 24px;
 }
@@ -69,5 +81,11 @@ a:hover {
 
 .header__links a {
   font-size: 0.875rem;
+  color: #9698a6;
+}
+
+.header__cta {
+  font-size: 0.875rem;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
