--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,4 +1,37 @@
 .header {
+  // Hamburger Open Styles
+
+  &.open {
+    .overlay {
+      display: block;
+    }
+
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    display: none;
+    opacity: 0;
+    position: fixed;
+    top: 3.75rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background: linear-gradient($darkBlue, transparent, transparent);
+  }
+
   nav {
     padding: 1.0625rem 1.5rem;
   }
@@ -11,14 +44,18 @@
   }
 
   &__menu {
+    // Mobile Menu
+
     > span {
       display: block;
       width: 26px;
       height: 2px;
       background-color: $darkBlue;
+      transition: all 300ms ease-in-out;
+      transform-origin: 3px 1px;
 
       &:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 5px;
       }
     }
   }
