--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,5 +1,10 @@
 @keyframes fade-in {
   from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
     opacity: 0;
   }
 
@@ -14,10 +19,17 @@
 
 @keyframes fade-out {
   from {
+    visibility: visible;
     opacity: 1;
   }
 
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+
   to {
+    visibility: hidden;
     opacity: 0;
   }
 }
