--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -1,6 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Public+Sans:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 @-webkit-keyframes fade-in {
   from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
     opacity: 0;
   }
   to {
@@ -9,6 +14,11 @@
 }
 @keyframes fade-in {
   from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
     opacity: 0;
   }
   to {
@@ -23,18 +33,30 @@
 
 @-webkit-keyframes fade-out {
   from {
+    visibility: visible;
     opacity: 1;
   }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
   to {
+    visibility: hidden;
     opacity: 0;
   }
 }
 
 @keyframes fade-out {
   from {
+    visibility: visible;
     opacity: 1;
   }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
   to {
+    visibility: hidden;
     opacity: 0;
   }
 }
@@ -121,10 +143,6 @@ button,
   }
 }
 
-.header.open .overlay {
-  display: block;
-}
-
 .header.open .header__menu > span:first-child {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -140,7 +158,6 @@ button,
 }
 
 .header .overlay {
-  display: none;
   opacity: 0;
   position: fixed;
   top: 3.75rem;
@@ -149,6 +166,14 @@ button,
   left: 0px;
   background: -webkit-gradient(linear, left top, left bottom, from(#2d314d), color-stop(transparent), to(transparent));
   background: linear-gradient(#2d314d, transparent, transparent);
+}
+
+.header .overlay.fade-in {
+  display: block;
+}
+
+.header .overlay.fade-out {
+  display: none;
 }
 
 .header nav {
