--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,7 +2,7 @@
   // Hamburger Open Styles
 
   &.open {
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -36,7 +36,8 @@
   }
 
   nav {
-    padding: 1.0625rem 1.5rem;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
   &__logo {
@@ -46,8 +47,8 @@
     }
   }
 
-  &__menu {
-    // Mobile Menu
+  &__toggle {
+    // Mobile Menu toggle
 
     > span {
       display: block;
@@ -60,6 +61,24 @@
       &:not(:last-child) {
         margin-bottom: 5px;
       }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $white;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
+
+    a {
+      display: block;
+      padding: 0.625rem;
+      color: $darkBlue;
+      text-align: center;
     }
   }
 
