--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -283,4 +283,24 @@ button,
 .header__cta:hover {
   opacity: 0.75;
 }
+
+.hero__image {
+  position: relative;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 17.5rem;
+}
+
+.hero__image::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url("/images/image-mockups.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 /*# sourceMappingURL=style.css.map */
