--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -25,6 +25,12 @@ body {
   }
 }
 
+h1,
+h2,
+h3 {
+  margin-top: 0px;
+}
+
 a,
 a:visited,
 a:hover {
@@ -33,8 +39,10 @@ a:hover {
 
 // Spacing
 .container {
-  padding-left: 1.5rem;
+  padding-top: 2.25rem;
   padding-right: 1.5rem;
+  padding-bottom: 2.25rem;
+  padding-left: 1.5rem;
 }
 
 .flex {
@@ -56,6 +64,7 @@ a:hover {
 // Buttons
 button,
 .button {
+  display: inline-block;
   padding: 0.875rem 2.1875rem;
   background: linear-gradient(to right, $limeGreen, $brightCyan);
   border: 0;
@@ -63,6 +72,8 @@ button,
   cursor: pointer;
   color: $white;
   font-weight: 400;
+  font-size: $font-sm;
+  transition: opacity 300ms ease-in-out;
 }
 
 // Visibility
