--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,4 +1,9 @@
 .hero {
+  @include breakpoint-up(large) {
+    display: flex;
+    align-items: center;
+  }
+
   &__image {
     position: relative;
     background-image: url("/images/bg-intro-mobile.svg");
@@ -7,18 +12,45 @@
     background-position: center center;
     min-height: 17.5rem;
 
+    @include breakpoint-up(large) {
+      flex: 3;
+      order: 2;
+      height: 41rem;
+      background-image: url("/images/bg-intro-desktop.svg");
+      background-position: left center;
+    }
+
     &::before {
       content: "";
       width: 100%;
       height: 100%;
       position: absolute;
       background-image: url("/images/image-mockups.png");
-      background-size: cover;
+      background-size: 93%;
       background-repeat: no-repeat;
-      background-position: center center;
+      background-position: center bottom;
     }
   }
 
   &__text {
+    text-align: center;
+
+    @include breakpoint-up(large) {
+      flex: 2;
+      order: 1;
+    }
+
+    h1 {
+      font-weight: 300;
+      font-size: 2.31rem;
+      line-height: 1.15;
+      color: $darkBlue;
+      margin-bottom: 1.5rem;
+    }
+
+    p {
+      line-height: 1.5;
+      margin-bottom: 2.25rem;
+    }
   }
 }
