--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,7 +1,11 @@
 .hero {
-  @include breakpoint-up(large) {
-    display: flex;
-    align-items: center;
+  background-color: $veryLightGray;
+
+  .container {
+    @include breakpoint-up(large) {
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__image {
@@ -16,11 +20,29 @@
       flex: 3;
       order: 2;
       height: 41rem;
-      background-image: url("/images/bg-intro-desktop.svg");
-      background-position: left center;
+      background-image: none;
+      // background-image: url("/images/bg-intro-desktop.svg");
+      // background-position: left center;
     }
 
     &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-image: url("/images/bg-intro-desktop.svg");
+      background-size: 93%;
+      background-repeat: no-repeat;
+      background-position: center bottom;
+
+      @include breakpoint-up(large) {
+        width: 150%;
+        background-size: 122%;
+        background-position: 0% 83%;
+      }
+    }
+
+    &::after {
       content: "";
       width: 100%;
       height: 100%;
@@ -29,6 +51,14 @@
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
+
+      @include breakpoint-up(large) {
+        width: 120%;
+        height: 122%;
+        background-size: 94%;
+        background-position: center 150%;
+        left: 22%;
+      }
     }
   }
 
@@ -38,6 +68,7 @@
     @include breakpoint-up(large) {
       flex: 2;
       order: 1;
+      text-align: left;
     }
 
     h1 {
@@ -46,6 +77,10 @@
       line-height: 1.15;
       color: $darkBlue;
       margin-bottom: 1.5rem;
+
+      @include breakpoint-up(large) {
+        font-size: $font-xlg;
+      }
     }
 
     p {
