--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -16,6 +16,11 @@
     background-position: center center;
     min-height: 17.5rem;
 
+    @include breakpoint-up(medium) {
+      min-height: 25rem;
+      background-position: center 60%;
+    }
+
     @include breakpoint-up(large) {
       flex: 3;
       order: 2;
@@ -26,16 +31,13 @@
     }
 
     &::before {
-      content: "";
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      background-image: url("/images/bg-intro-desktop.svg");
-      background-size: 93%;
-      background-repeat: no-repeat;
-      background-position: center bottom;
-
       @include breakpoint-up(large) {
+        content: "";
+        position: absolute;
+        height: 100%;
+        background-image: url("/images/bg-intro-desktop.svg");
+        background-repeat: no-repeat;
+        background-position: center bottom;
         width: 150%;
         background-size: 122%;
         background-position: 0% 83%;
@@ -51,6 +53,10 @@
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
+
+      @include breakpoint-up(medium) {
+        background-size: 52%;
+      }
 
       @include breakpoint-up(large) {
         width: 120%;
