--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -19,6 +19,7 @@ body {
   font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
+  min-height: 300vh;
 
   @include breakpoint-up(large) {
     font-size: $font-med;
@@ -80,27 +81,45 @@ a:hover {
   padding-left: 1.5rem;
 
   &--pall {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
     padding-right: 1.5rem;
-    padding-bottom: 2.25rem;
+    padding-bottom: 4.375rem;
     padding-left: 1.5rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
   &--py {
-    padding-top: 2.25rem;
-    padding-bottom: 2.5rem;
+    padding-top: 4.375rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
   &--px {
     padding-right: 1.5rem;
     padding-left: 1.5rem;
   }
   &--pt {
-    padding-top: 2.25rem;
+    padding-top: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-top: 6rem;
+    }
   }
   &--pr {
     padding-right: 1.5rem;
   }
   &--pb {
-    padding-bottom: 2.5rem;
+    padding-bottom: 4.375rem;
+
+    @include breakpoint-up(large) {
+      padding-bottom: 6rem;
+    }
   }
   &--pl {
     padding-left: 1.5rem;
