--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -3,17 +3,16 @@
 }
 
 .article {
-  
   &__content {
-
   }
 
   &__grid {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 1.875rem;
 
     @include breakpoint-up(medium) {
-      grid-template-columns: repeat(2,1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @include breakpoint-up(large) {
@@ -22,26 +21,29 @@
   }
 
   &__item {
-
   }
 
   &__image {
-
+    height: 12.5rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   &__text {
+    padding: 1.875rem 1.875rem 2.5rem 1.875rem;
 
+    @include breakpoint-up(medium) {
+      padding: 1.875rem 1.5625rem;
+    }
   }
 
   &__author {
-
   }
 
   &__title {
-
   }
 
   &__description {
-
   }
 }
