--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -575,6 +575,7 @@ button,
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
+  gap: 1.875rem;
 }
 
 @media (min-width: 40em) {
@@ -588,6 +589,23 @@ button,
   .article__grid {
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.article__image {
+  height: 12.5rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.article__text {
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+}
+
+@media (min-width: 40em) {
+  .article__text {
+    padding: 1.875rem 1.5625rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
