--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -21,6 +21,10 @@
   }
 
   &__item {
+    border-radius: 0.3125rem;
+    overflow: hidden;
+    background-color: $white;
+    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
   }
 
   &__image {
@@ -32,6 +36,7 @@
 
   &__text {
     padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+    color: $grayishBlue;
 
     @include breakpoint-up(medium) {
       padding: 1.875rem 1.5625rem;
@@ -39,11 +44,18 @@
   }
 
   &__author {
+    font-size: 0.625rem;
+    margin-bottom: 0.75rem;
   }
 
   &__title {
+    font-size: 1.0625rem;
+    line-height: 1.2;
+    color: $darkBlue;
+    margin-bottom: 0.5rem;
   }
 
   &__description {
+    font-size: 0.8125rem;
   }
 }
