--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -592,6 +592,14 @@ button,
   }
 }
 
+.article__item {
+  border-radius: 0.3125rem;
+  overflow: hidden;
+  background-color: white;
+  -webkit-box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+}
+
 .article__image {
   height: 12.5rem;
   background-size: cover;
@@ -601,11 +609,28 @@ button,
 
 .article__text {
   padding: 1.875rem 1.875rem 2.5rem 1.875rem;
+  color: #9698a6;
 }
 
 @media (min-width: 40em) {
   .article__text {
     padding: 1.875rem 1.5625rem;
   }
+}
+
+.article__author {
+  font-size: 0.625rem;
+  margin-bottom: 0.75rem;
+}
+
+.article__title {
+  font-size: 1.0625rem;
+  line-height: 1.2;
+  color: #2d314d;
+  margin-bottom: 0.5rem;
+}
+
+.article__description {
+  font-size: 0.8125rem;
 }
 /*# sourceMappingURL=style.css.map */
