--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -25,6 +25,11 @@
     overflow: hidden;
     background-color: $white;
     box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
+    transition: all 150ms ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__image {
