--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -94,7 +94,8 @@ body {
   font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
-  min-height: 300vh;
+  min-height: 350vh;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
@@ -639,5 +640,16 @@ button,
 
 .article__description {
   font-size: 0.8125rem;
+}
+
+.footer {
+  background-color: #2d314d;
+  color: white;
+  padding: 2.5rem;
+  text-align: center;
+}
+
+.footer a {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
