--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -9,32 +9,45 @@
   }
 
   &__logo {
-    
-  } 
+    display: inline-block;
+    margin-bottom: 1.875rem;
+  }
 
   &__social {
+    margin-bottom: 1.875rem;
 
+    a {
+      display: inline-block;
+    }
+
+    a:not(:last-child) {
+      margin-right: 1rem;
+    }
   }
 
   &__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &.col1 {
-
     }
 
     &.col2 {
+      margin-bottom: 1.875rem;
+    }
 
+    a {
+      line-height: 2.25;
     }
   }
 
   &__cta {
-
     a.button {
-
+      margin-bottom: 1.875rem;
     }
   }
 
   &__copyright {
-
   }
 }
