--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -10,7 +10,8 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
       "logo links1 links2 cta"
-      "social links1 links2 cta";
+      "social links1 links2 copyright";
+    justify-content: start;
   }
 
   a {
@@ -19,18 +20,23 @@
 
   &__logo {
     display: inline-block;
-    margin-bottom: 1.875rem;
 
+    @include breakpoint-down(medium) {
+      margin-bottom: 1.875rem;
+    }
     @include breakpoint-up(large) {
       grid-area: logo;
     }
   }
 
   &__social {
-    margin-bottom: 1.875rem;
+    @include breakpoint-down(medium) {
+      margin-bottom: 1.875rem;
+    }
 
     @include breakpoint-up(large) {
       grid-area: social;
+      align-self: end;
     }
 
     a {
@@ -46,7 +52,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 0.9375rem;
 
+    @include breakpoint-up(large) {
+      align-items: start;
+    }
     &.col1 {
       @include breakpoint-up(large) {
         grid-area: links1;
@@ -54,7 +64,9 @@
     }
 
     &.col2 {
-      margin-bottom: 1.875rem;
+      @include breakpoint-down(medium) {
+        margin-bottom: 1.875rem;
+      }
 
       @include breakpoint-up(large) {
         grid-area: links2;
@@ -69,12 +81,23 @@
   &__cta {
     @include breakpoint-up(large) {
       grid-area: cta;
+      text-align: right;
+      justify-self: end;
     }
     a.button {
-      margin-bottom: 1.875rem;
+      @include breakpoint-down(medium) {
+        margin-bottom: 1.875rem;
+      }
     }
   }
 
   &__copyright {
+    font-size: 0.9375rem;
+
+    @include breakpoint-up(large) {
+      grid-area: copyright;
+      align-self: end;
+      justify-self: end;
+    }
   }
 }
