--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -7,7 +7,7 @@
   @include breakpoint-up(large) {
     display: grid;
     grid-template-columns: repeat(3, 1fr) 2fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr auto;
     grid-template-areas:
       "logo links1 links2 cta"
       "social links1 links2 copyright";
@@ -41,6 +41,7 @@
 
     a {
       display: inline-block;
+      height: 1.25rem;
     }
 
     a:not(:last-child) {
@@ -55,8 +56,10 @@
     font-size: 0.9375rem;
 
     @include breakpoint-up(large) {
+      justify-content: space-between;
       align-items: start;
     }
+
     &.col1 {
       @include breakpoint-up(large) {
         grid-area: links1;
@@ -74,7 +77,9 @@
     }
 
     a {
-      line-height: 2.25;
+      @include breakpoint-down(medium) {
+        line-height: 2.25;
+      }
     }
   }
 
