--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -655,8 +655,8 @@ button,
     display: grid;
     -ms-grid-columns: (1fr)[3] 2fr;
         grid-template-columns: repeat(3, 1fr) 2fr;
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
+    -ms-grid-rows: 1fr auto;
+        grid-template-rows: 1fr auto;
         grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
     -webkit-box-pack: start;
         -ms-flex-pack: start;
@@ -701,6 +701,7 @@ button,
 
 .footer__social a {
   display: inline-block;
+  height: 1.25rem;
 }
 
 .footer__social a:not(:last-child) {
@@ -723,6 +724,9 @@ button,
 
 @media (min-width: 64em) {
   .footer__links {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
@@ -747,8 +751,10 @@ button,
   }
 }
 
-.footer__links a {
-  line-height: 2.25;
+@media (max-width: 63.9375em) {
+  .footer__links a {
+    line-height: 2.25;
+  }
 }
 
 @media (min-width: 64em) {
