--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -4,14 +4,17 @@
   padding: 2.5rem;
   text-align: center;
 
-  @include breakpoint-up(large) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr) 2fr;
-    grid-template-rows: 1fr auto;
-    grid-template-areas:
-      "logo links1 links2 cta"
-      "social links1 links2 copyright";
-    justify-content: start;
+  .container {
+    @include breakpoint-up(large) {
+      display: grid;
+      grid-template-columns: 2fr 1fr 1fr 3fr;
+      grid-template-rows: 1fr auto;
+      grid-template-areas:
+        "logo links1 links2 cta"
+        "social links1 links2 copyright";
+      gap: 1rem;
+      justify-content: start;
+    }
   }
 
   a {
@@ -42,6 +45,14 @@
     a {
       display: inline-block;
       height: 1.25rem;
+
+      svg path {
+        transition: fill 150ms ease-in-out;
+      }
+
+      &:hover svg path {
+        fill: $limeGreen;
+      }
     }
 
     a:not(:last-child) {
@@ -77,8 +88,11 @@
     }
 
     a {
-      @include breakpoint-down(medium) {
-        line-height: 2.25;
+      line-height: 2.25;
+      transition: color 150ms ease-in-out;
+
+      &:hover {
+        color: $limeGreen;
       }
     }
   }
@@ -97,7 +111,8 @@
   }
 
   &__copyright {
-    font-size: 0.9375rem;
+    font-size: 0.8125rem;
+    color: $grayishBlue;
 
     @include breakpoint-up(large) {
       grid-area: copyright;
