--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -650,14 +650,15 @@ button,
 }
 
 @media (min-width: 64em) {
-  .footer {
+  .footer .container {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[3] 2fr;
-        grid-template-columns: repeat(3, 1fr) 2fr;
+    -ms-grid-columns: 2fr 1fr 1fr 3fr;
+        grid-template-columns: 2fr 1fr 1fr 3fr;
     -ms-grid-rows: 1fr auto;
         grid-template-rows: 1fr auto;
         grid-template-areas: "logo links1 links2 cta" "social links1 links2 copyright";
+    gap: 1rem;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: start;
@@ -702,6 +703,15 @@ button,
 .footer__social a {
   display: inline-block;
   height: 1.25rem;
+}
+
+.footer__social a svg path {
+  -webkit-transition: fill 150ms ease-in-out;
+  transition: fill 150ms ease-in-out;
+}
+
+.footer__social a:hover svg path {
+  fill: #31d35c;
 }
 
 .footer__social a:not(:last-child) {
@@ -751,10 +761,14 @@ button,
   }
 }
 
-@media (max-width: 63.9375em) {
-  .footer__links a {
-    line-height: 2.25;
-  }
+.footer__links a {
+  line-height: 2.25;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+
+.footer__links a:hover {
+  color: #31d35c;
 }
 
 @media (min-width: 64em) {
@@ -773,7 +787,8 @@ button,
 }
 
 .footer__copyright {
-  font-size: 0.9375rem;
+  font-size: 0.8125rem;
+  color: #9698a6;
 }
 
 @media (min-width: 64em) {
