--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -146,9 +146,10 @@ a:hover {
 // Buttons
 button,
 .button {
+  position: relative;
   display: inline-block;
   padding: 0.875rem 2.1875rem;
-  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  background-image: linear-gradient(to right, $limeGreen, $brightCyan);
   border: 0;
   border-radius: 50px;
   cursor: pointer;
@@ -156,6 +157,23 @@ button,
   font-weight: 400;
   font-size: $font-sm;
   transition: opacity 300ms ease-in-out;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.25);
+    opacity: 0;
+    transition: opacity 150ms ease-in-out;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
 }
 
 // Visibility
