--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -245,10 +245,11 @@ a:hover {
 
 button,
 .button {
+  position: relative;
   display: inline-block;
   padding: 0.875rem 2.1875rem;
-  background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#1fbde5));
-  background: linear-gradient(to right, #31d35c, #1fbde5);
+  background-image: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#1fbde5));
+  background-image: linear-gradient(to right, #31d35c, #1fbde5);
   border: 0;
   border-radius: 50px;
   cursor: pointer;
@@ -257,6 +258,26 @@ button,
   font-size: 0.875rem;
   -webkit-transition: opacity 300ms ease-in-out;
   transition: opacity 300ms ease-in-out;
+  overflow: hidden;
+}
+
+button::before,
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.25);
+  opacity: 0;
+  -webkit-transition: opacity 150ms ease-in-out;
+  transition: opacity 150ms ease-in-out;
+}
+
+button:hover::before,
+.button:hover::before {
+  opacity: 1;
 }
 
 @media (max-width: 63.9375em) {
