--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -292,6 +292,11 @@ button:hover::before,
   }
 }
 
+.header {
+  position: relative;
+  z-index: 1;
+}
+
 .header.open .header__toggle > span:first-child {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -313,16 +318,8 @@ button:hover::before,
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#2d314d), color-stop(transparent), to(transparent));
-  background: linear-gradient(#2d314d, transparent, transparent);
-}
-
-.header .overlay.fade-in {
-  display: block;
-}
-
-.header .overlay.fade-out {
-  display: none;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#2d314d), to(transparent));
+  background-image: linear-gradient(#2d314d, transparent);
 }
 
 .header nav {
@@ -394,8 +391,8 @@ button:hover::before,
   background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#1fbde5));
   background: linear-gradient(to right, #31d35c, #1fbde5);
   opacity: 0;
-  -webkit-transition: opacity 200ms ease-in-out;
-  transition: opacity 200ms ease-in-out;
+  -webkit-transition: opacity 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
 }
 
 .header__links a:hover {
